@@ -4,4 +4,10 @@ WITH_CCOPTS
 WITH_KRB5ROOT
 CONFIG_RULES
 CHECK_SIGNALS
+dnl
+dnl Check for sys/cdefs.h.
+dnl
+CDEFS_INCLUDE=["-I$(PORTDIR)"]
+AC_HAVE_HEADERS(sys/cdefs.h, CDEFS_INCLUDE=)
+AC_SUBST(CDEFS_INCLUDE)
 V5_AC_OUTPUT_MAKEFILE
