@@ -1,3 +1,8 @@
+
+Tue May 30 10:41:23 EDT 1995	Paul Park	(pjpark@mit.edu)
+	* configure.in: Check for sys/cdefs.h.
+	* Makefile.in: If sys/cdefs.h present, don't use the one in PORT/krb5.
+
 Tue May 30 09:53:05 1995  Ezra Peisach  (epeisach@kangaroo.mit.edu)
 
 	* krb5_ndbm.c: If the size field of datum and DBT do not match,
